# Embedded-Applications

./: .gitignore  README.md
C++/PlatformServices/: CONFIG.sh  INSTALL.sh  ProjectDiagram.tldr  docker-compose.yml  main.cpp  startClient.sh  startServer.sh
C++/PlatformServices/CMakeClient/: CMakeLists.txt
C++/PlatformServices/CMakeServer/: CMakeLists.txt
C++/PlatformServices/include/Adapters/: ConsoleAppInterface.h
C++/PlatformServices/include/CommonClasses/: CommonDefinitions.h
C++/PlatformServices/include/Containers/: LinkedList.h  Queue.h
C++/PlatformServices/include/Interfaces/: DataBaseConnectorInterface.h  DataBaseTableInterface.h  DataParserInteface.h  NetworkClassInterface.h
C++/PlatformServices/include/JsonModule/: JSONParser.h  JsonItem.h
C++/PlatformServices/include/Modules/: ConsoleMain.h  DataBaseTable.h  HTTPParser.h  HTTPSessionManager.h  MySQLConnector.h
C++/PlatformServices/include/Modules/HTTPService/: HTTPDefinitions.h  HTTPParams.h  HTTPSession.h  HTTPSessionManager.h  HTTPUtility.h
C++/PlatformServices/include/Modules/Logger/: LogLevel.h  Logger.h
C++/PlatformServices/include/Modules/TCPService/: TCPClient.h  TCPServer.h
C++/PlatformServices/src/: client_main.cpp  server_main.cpp
C++/PlatformServices/src/JsonModule/: JSONParser.cpp  JsonItem.cpp
C++/PlatformServices/src/Modules/: ConsoleMain.cpp  DataBaseTable.cpp  HTTPParser.cpp  HTTPSession.cpp  HTTPSessionManager.cpp  HTTPUtility.cpp  MySQLConnector.cpp
C++/PlatformServices/src/Modules/HTTPService/: HTTPParams.cpp  HTTPSession.cpp  HTTPSessionManager.cpp  HTTPUtility.cpp
C++/PlatformServices/src/Modules/Logger/: LogLevel.cpp  Logger.cpp
C++/PlatformServices/src/Modules/TCPService/: TCPClient.cpp  TCPServer.cpp
C++/PlatformServices/webFiles/: HomePage.html  index.html
C++/webServer/: README.md  startServer.sh
C++/webServer/include/Adapters/: ConsoleAppInterface.h
C++/webServer/include/Containers/: LinkedList.h
C++/webServer/include/Interfaces/: DataParserInteface.h
C++/webServer/include/JsonModule/: JSONParser.h
C++/webServer/include/Modules/Logger/: LogLevel.h
C++/webServer/include/Modules/TCPService/: TCPClient.h  TCPServer.h
C++/webServer/lib/: test.cpp
C++/webServer/lib/mysql-connector-cpp/share/doc/libmysqlcppconn-dev/: INFO_BIN  copyright
C++/webServer/src/Modules/HTTPService/: HTTPSessionManager.cpp
C++/webServer/src/Modules/Logger/: LogLevel.cpp
C++/webServer/webFiles/: index.html
ConfigurationManagement/: CMakeLists.txt  toolchain-windows.cmake
ConfigurationManagement/include/ConcreteClasses/: ConfigurationManagement.h  JsonConfigParser.h  XMLConfigParser.h
ConfigurationManagement/include/Enumerations/: ConfigurationEnumerations.h
ConfigurationManagement/include/Interface/: IConfigParser.h  IConfigurationManagement.h
ConfigurationManagement/sampleJson/: testJson.json
ConfigurationManagement/src/: main.cpp
ConfigurationManagement/src/ConcreteClasses/: ConfigurationManagement.cpp  JsonConfigParser.cpp  XMLConfigParser.cpp
Docker/C++/: Dockerfile  main.cpp
webServer/: CONFIG.sh  Dockerfile  INSTALL.sh  README.md
webServer/CMakeClient/: CMakeLists.txt
webServer/CMakeLoggerServer/: CMakeLists.txt
webServer/CMakeServer/: CMakeLists.txt
webServer/CMakeTestWebClient/: CMakeLists.txt
webServer/LoggerServer/include/: LoggerServer.h
webServer/LoggerServer/src/: LoggerServer.cpp  main.cpp
webServer/TCPTestWebClient/include/: TCPClient.h
webServer/TCPTestWebClient/src/: TCPClient.cpp  main.cpp
webServer/include/Adapters/: ConsoleAppInterface.h
webServer/include/CommonClasses/: CommonDefinitions.h
webServer/include/Containers/: LinkedList.h  Queue.h
webServer/include/Interfaces/: DataBaseConnectorInterface.h  DataBaseTableInterface.h  DataParserInteface.h  EventMessageInterface.h  EventQueueInterface.h  LogWriterInterface.h  NetworkClassInterface.h
webServer/include/JsonModule/: JSONParser.h  JsonItem.h
webServer/include/Modules/: ConsoleMain.h  DataBaseTable.h  MySQLConnector.h
webServer/include/Modules/Database/MySQL/: MySQLConnector.h
webServer/include/Modules/EventMessage/: DBEventMessage.h  DBEventQueue.h  HTTPEventMessage.h  HTTPEventQueue.h  LoggerEventMessage.h  LoggerEventQueue.h
webServer/include/Modules/HTTPService/: HTTPDefinitions.h  HTTPParams.h  HTTPSession.h  HTTPSessionManager.h  HTTPUtility.h
webServer/include/Modules/Logger/: ConsoleWriter.h  FileWriter.h  LogLevel.h  Logger.h  RemoteWriter.h
webServer/include/Modules/TCPService/: TCPClient.h  TCPServer.h
webServer/src/: client_main.cpp  server_main.cpp
webServer/src/Interfaces/: LogWriterInterface.cpp
webServer/src/JsonModule/: JSONParser.cpp  JsonItem.cpp
webServer/src/Modules/: ConsoleMain.cpp  DataBaseTable.cpp  MySQLConnector.cpp
webServer/src/Modules/Database/MySQL/: MySQLConnector.cpp
webServer/src/Modules/HTTPService/: HTTPParams.cpp  HTTPSession.cpp  HTTPSessionManager.cpp  HTTPUtility.cpp
webServer/src/Modules/Logger/: Logger.cpp  RemoteWriter.cpp
webServer/src/Modules/TCPService/: TCPClient.cpp  TCPServer.cpp
webServer/webFiles/CSS/: home_styles.css  index_styles.css
webServer/webFiles/HTML/: home.html  index.html
